[metadata]
name = chart-exporter
version = attr: chart_exporter.__version__
author = Gabi Davar
author_email = grizzly.nyo@gmail.com
description = Exposes helm release info as Prometheus metrics.
url = https://github.com/mindw/exporter
license = MIT

[options]
packages = find:
install_requires =
    grpcio >= 1.15, < 1.16
    PyYAML >= 3.13
    click == 6.7
    prometheus_client >= 0.3.1, < 0.4
    aiohttp >= 3.4.4, < 4.0
    cchardet
    prometheus_async >= 18.3.0, < 19.0
python_requires = >=3.6

[options.entry_points]
console_scripts =
    chart_exporter=cluster_helper.cmd:cli

[options.extras_require]
testing =
    pytest >= 3.8.0, < 4.0
    pytest-asyncio >= 0.9.0, <= 1.0
    pytest-mock >= 1.10.0, <= 2.0
    pytest-cov
